        optimizations from trunk (and ExtendedPathIndex).

      - Updated 'pytz' from '2007f' to '2008i'.

      - Moved svn:externals for 'mechanize', 'ClientPath', and 'pytz' to
        versions managed outside the Zope3 trunk.

      - Testing.ZopeTestCase: Remove quota argument from DemoStorage calls in
        preparation for ZODB 3.9.

    Bugs Fixed

      - ZPublisher response.setBody: don't append Accept-Encoding to Vary
        header if it is already present - this can make cache configuration
        difficult. (merged 99493)

      - Launchpad #267834: proper separation of HTTP header fields    
        using CRLF as requested by RFC 2616. (merged 90980, 92625)

      - Launchpad #348223: optimize catalog query by breaking out early from
        loop over indexes if the result set is already empty.

      - "Permission tab": correct wrong form parameter for
        the user-permission report

      - Launchpad #290254, DateTime/DateTime.py:
        added '__setstate__' to cope with old pickles missing a '_micros'
        attribute;  Python's pickling support was creating a new instance,
        *with* a '_micros' attribute, but not clearing that attribute before
        updating the instance dict with the unpickled state.

      - Launchpad #332168, Shared/DC/RDBMS/Connection.py:
        do not expose DB connection strings through exceptions

      - Launchpad #324876: tighened regex for detecting the charset
        from a meta-equiv header

      - Launchpad #174705:  ensure that the error info object exposed to a
        'tal:on_error' handler has attributes visible to restricted code.

      - Acquisition wrappers now correctly proxy __iter__.

  Zope 2.11.2 (2008/10/24) 

    Bugs Fixed

      - Ensure that response header values cannot embed CRLF pairs, which
        violate the HTTP spec (RFC 2616).

      - Launchpad #282677: fixed implementation of guarded_map and
        provided tests and implementation for guarded_zip (RestrictedPython).
